# multi-agent-customer-support

./: .dockerignore  .env.example  .gitignore  BUILD_LOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ui  README.md  SYSTEM_DESIGN.md  docker-compose.yml  freq_ques.json  freq_questions.json  graph_visualize.py  main.py  pyproject.toml  requirements.txt  upload_mysql_db (1).ipynb
app/: api.py  cache.py  chat_history.py  config.py  db_agent.py  email_alert.py  llm.py  models.py  monitoring.py  prompts.py  security.py  state.py  stream_events.py  vector_store.py
app/agents/: base.py  conversation_agent.py  rag_agent.py  sql_agent.py
app/agents/graph/: nodes.py  rag_subgraph.py  sql_nodes.py
app/graph/: builder.py  escalation.py  nodes.py  rag_subgraph.py  sql_nodes.py
app/infrastructure/: db_agent.py  email_alert.py  llm.py  vector_store.py
app/models/: agent.py  metadata.py  planning.py  state.py
app/orchestration/: planner.py  registry.py  supervisor.py  supervisor_react.py
app/pipeline/: escalation.py  post_processing.py
app/services/: cache.py  health.py  memory.py  monitoring.py  security.py
infrastructure/: config.env  task-definition-api.json  task-definition-ui.json
tests/: test_api.py  test_cache.py  test_graph.py  test_security.py
ui/: streamlit_app.py
